@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -44,14 +40,11 @@ global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -63,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -107,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "k8FgAGAouvAoGqmmTWVA0WB2qYw5p/bttYLLaJJth4uhaj16HWW4q08YTRKCidCSFZh3uenNowxGOcqXy8tleYS1zLOwsMCV27c7LCHiYLzU0nZe4BuKGd42IBYzplHMwSAQjKrMnLZUVECz37/42bRTRmLrhG203QumP6S3VY5NF7hman5TUt64wHPs7w+BI/cWrRaIezabJbsEEzWSklTGUGdNCJ6UP5v+trOUIUHNBwnwIf1HZaT+7aJrFIkJp1latu4xeVCUl/eVHH3HChh/brfuHkzwtsj0OWMQtgnAb4g9TjaPyBeCL7B6N+SbkZCMbrO7De9XFT+1TcsSVpsDgC2Vpm2GJ0Ethwjb4wOX4W8rQlOY2KOai+wceZGwy1xqqIppMtCJ5zgV2YinjSr/jWWtgCZbi7pwyugK9OzDuQ1vYlI/9qjBURl7sACBulPorW3ZCA81qoBbelfdrto/xx2/bMVDZvMJBSaesnn+EMapQ3S8k61nN+w0KiseFePO54M3fwXiJlMmrJbVt9LNz5Jsg42Z8hyKINHdgw22rA1MrniOrCTVQUMCqYE+6F03/8nLQoV8QFqwMzhwFIFp2gTqXWsIXoU+4ToFAHcTiRIasXrEG5BE9e1RoJDaF1C0Ko/OsM7pmk1IQw+ZEdZJae4FvFjQgVQWEN92YoQ="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -115,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "aqwk9bYE5BNxGuVhIFRZecRE1HNTy/88PNsTe2ZLjYG+67zdbGp9g2G+h/mQ9pGjqOc5HhZx5XNeTSBNwcPPMKLS8Fii8Mkkj9XZi7QvgOEP9W/SzbxVR3NqX+k6hl26s1j/usSS1URrGHeEswCQthBXCyCSxd4YDYWk1d3UOHRTESsI7cpDHcXJzV20GrSahEH7kLzbok+Aohajy9QTgvH3FGwT1H0KjVFEfd474LnFErkBwxF05YY742EGzhFz8XvJhM8pPTtIjnSRzQwjvfX1Z409nk+ckKp4JM+6KrkBZXyMOq9VTNzZEOjyrbJnhp690OWP6QMptTbMMYMLAf1WfQ3Y0HI86u2EMfNdFPJCS2r/POeArhqvFPhdKHSgsd+TSGG77sNU1Q+kRMh/WL0Jf8ZqxDE48U5KvK2FErZLfgRYwwK077ivv+2t5pK6R8pbMsZ5xaomDg+QMISWe9cTMD8DsVmNeFISWBG+b3y65T+EaenbATRF13xoicogScD7DgXzHb/v3sgo4/k6YLnwWOK6fSCV2DrWa1FoOJjTiPgkrtqxHDgPOtEed8atexNDyCK0RpFEfmP5Hb6vmduaH3vuiWkSM3fLasniJu33WKMeYRzcZ0rjcAVcUO/Yiuyv5oJaCjffEmA6ZA/Pue7dqOvB2+BQ38qQzAdfjcY="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
