@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.0.2-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Wed Feb 13 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
 - Use Simplib::Port data type in lieu of deprecated, simplib
   Puppet 3 validate_port()
